design da tela de login e algumas alterações do codigo api

--- a/FRONT/home.html
+++ b/FRONT/home.html
@@ -20,7 +20,7 @@
 
     <style>
         body {
-            min-height: 2000px;
+           
             padding-top: 70px;
         }
     </style>
@@ -69,6 +69,7 @@
 
     <!--CONTEUDO-->
     <div class="container">
+
         <div id="page">
             <section class="row">
                 <div class="col-md-4">
@@ -76,22 +77,9 @@
                 </div>
             </section>
             <br>
-            <section class="row">
-                <div class="col-md-8 col-sm-12 col-xs-12">
-                    <img class="img-rounded img-responsive" src="https://dummyimage.com/1024x1024/000/EEE" alt="">
-                    <div>Postado em 30/05/2017</div>
-                    <div>
-                        <strong>
-                            <span id="total_likes">7</span> likes
-                        </strong>
-                    </div>
-                    <div>
-                        <a class="btn btn-primary" href="">Curtir</a>
-                        <a class="btn btn-success pull-right" href="">Favoritar</a>
-                    </div>
-                </div>
-            </section>
+            
         </div>
+        <hr>
     </div>
     <!--/CONTEUDO-->
 
@@ -126,7 +114,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-default" id="fechar" data-dismiss="modal">Fechar</button>
                     <button type="button" id="btn_postar" class="btn btn-primary">Postar imagem</button>
                 </div>
             </div>
