--- a/FRONT/index.html
+++ b/FRONT/index.html
@@ -2,89 +2,116 @@
 <html lang="pt-br">
 
 <head>
-    <title>Poster - Compartilhe Fotos</title>
+    <title>Poster</title>
     <meta charset="UTF-8">
     <meta name="author" content="Gadiel Kalleb">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- LINKS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-    <!--/LINKS -->
-
-    <!-- SCRIPTS -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/cadastro.js"></script>
-    <!--/SCRIPTS -->
-
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 </head>
 
-<body style="background: #EEEEEE">
-    <div class="container">
-        <div id="page">
-            <!-- Area para o Login -->
-            <section class="row">
-                <div class="col-md-4 col-sm-12 col-xs-12">
-                    <h1>Poster</h1>
-                    <h1>Login</h1>
-                    
-                    <div class="alert alert-danger" id="msgErro" style="display: none">
-                        Login ou senha inválidos
-                    </div>
+<body>
 
-                    <form id="login">
-                        <div class="form-group">
-                            <label class="control-label" for="exampleInputEmail1">Email</label>
-                            <input name="email" type="email" class="form-control" id="email" placeholder="Email" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label" for="exampleInputPassword1">Senha</label>
-                            <input name="senha" type="password" class="form-control" id="senha" placeholder="Senha" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Logar</button>
-                    </form>
-                </div>
-            </section>
-            <hr>
-            <!-- Area para Cadastro -->
-            <section class="row">
+    <section class="container">
+        <div class="page">
+            <div class="row">
                 <div class="col-md-4 col-sm-12 col-xs-12">
-                    <h1>Cadastro</h1>
-                    <form id="cadastro">
-                        <div class="form-group">
-                            <label class="control-label" for="nome">Nome:</label>
-                            <input type="text" name="nome" class="form-control" required>
+                    <h1 class="titulo">Poster</h1>
+                    <i id="icone" class="fa fa-camera-retro fa-5x" aria-hidden="true"></i>
+                    </br>
+                    <h3>Login</h3>
+                    <form id="login">
+
+                        <div class="alert alert-danger" id="msgErro" style="display: none">
+                            Login ou senha inválidos
                         </div>
+
                         <div class="form-group">
-                            <label class="control-label" for="email">Email:</label>
-                            <input type="email" name="email" id="cad_email" class="form-control" required>
+                            <label for="email" class="control-label">Email:</label>
+                            <input type="email" name="email" class="form-control" id="email" placeholder="Email">
                         </div>
+
                         <div class="form-group">
-                            <label class="control-label" for="telefone">Telefone: ex: 11 97777-7777</label>
-                            <input type="text" name="telefone" id="telefone" class="form-control" required>
+                            <label for="senha" class="control-label">Senha:</label>
+                            <input type="password" name="senha" class="form-control" id="senha" placeholder="senha">
                         </div>
-                        <div class="form-group">
-                            <label class="control-label" for="nome">Senha:</label>
-                            <input type="password" name="senha" id="cad_senha" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label" for="nome">Confirmar senha:</label>
-                            <input type="password" name="conf_senha" id="conf_senha" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label" for="nome">Foto:</label>
-                            <input id="foto" type="file" name="foto" accept="image/jpeg">
-                        </div>
-                        <button class="btn btn-default">Cadastrar</button>
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+
                     </form>
-                    <br>
+                    </br>
+                    <strong>
+                        <p>Não possui cadastro? <a data-toggle="modal" data-target="#myModal">Clique aqui</a></p>
+                    </strong>
                 </div>
-            </section>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Cadastrar</h4>
+                </div>
+                <div class="modal-body">
+
+                    <section class="row">
+                        <div class="col-md-4 col-sm-12 col-xs-12">
+
+                            <form id="cadastro">
+                                <div class="form-group">
+                                    <label class="control-label" for="nome">Nome:</label>
+                                    <input type="text" name="nome" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="email">Email:</label>
+                                    <input type="email" name="email" id="cad_email" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="telefone">Telefone: ex: 11 97777-7777</label>
+                                    <input type="text" name="telefone" id="telefone" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="nome">Senha:</label>
+                                    <input type="password" name="senha" id="cad_senha" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="nome">Confirmar senha:</label>
+                                    <input type="password" name="conf_senha" id="conf_senha" class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="nome">Foto:</label>
+                                    <input id="foto" type="file" name="foto" accept="image/jpeg">
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                                    <button type="button" class="btn btn-primary">Salvar</button>
+                                </div>
+                            </form>
+                            <br>
+                        </div>
+                    </section>
+
+                </div>
+            </div>
         </div>
     </div>
+
+    <footer>
+        <p></p>
+    </footer>
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/cadastro.js"></script>
 </body>
 
 </html>
